--- a/EverywhereHouseController/res/layout/create_user.xml
+++ b/EverywhereHouseController/res/layout/create_user.xml
@@ -1,39 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:fillViewport="true" >
+
+    <RelativeLayout
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" >
-
-    <EditText
-        android:id="@+id/newEmail"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/textView3"
-        android:layout_alignLeft="@+id/newUser"
-        android:ems="10"
-        android:singleLine="true" />
-
-    <EditText
-        android:id="@+id/newUser"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/textMessage"
-        android:layout_marginLeft="36dp"
-        android:layout_toRightOf="@+id/textMessage"
-        android:ems="10"
-        android:singleLine="true" >
-
-        <requestFocus />
-    </EditText>
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textMessage"
-        android:layout_marginTop="67dp"
-        android:layout_toLeftOf="@+id/newUser"
-        android:text="E-mail"
-        android:textSize="20sp" />
 
     <Button
         android:id="@+id/newUserCancel"
@@ -58,26 +31,6 @@
         android:password="true"
         android:singleLine="true" />
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView2"
-        android:layout_marginTop="53dp"
-        android:layout_toLeftOf="@+id/newUser"
-        android:text="Password"
-        android:textSize="20sp" />
-
-    <TextView
-        android:id="@+id/textView4"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/textView3"
-        android:layout_marginTop="27dp"
-        android:layout_toLeftOf="@+id/newUser"
-        android:text="Repeat \nPassword"
-        android:textSize="20sp" />
-
     <EditText
         android:id="@+id/newRepeatPassword"
         android:layout_width="wrap_content"
@@ -89,27 +42,79 @@
         android:password="true"
         android:singleLine="true" />
 
-    <TextView
-        android:id="@+id/textMessage"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="66dp"
-        android:layout_marginTop="86dp"
-        android:text="User"
-        android:textSize="20sp" />
-
     <Button
         android:id="@+id/newUserConfirm"
         android:layout_width="100dp"
         android:layout_height="40dp"
         android:layout_alignLeft="@+id/textView2"
         android:layout_below="@+id/textView4"
-        android:layout_marginTop="48dp"
+        android:layout_marginTop="92dp"
         android:background="@drawable/button_config"
         android:text="Confirm"
         android:textColor="@drawable/button_text_color"
         android:textSize="20sp" />
 
+    <EditText
+        android:id="@+id/newUser"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_alignTop="@+id/textMessage"
+        android:layout_marginRight="25dp"
+        android:ems="10"
+        android:singleLine="true" >
+
+        <requestFocus />
+    </EditText>
+
+    <TextView
+        android:id="@+id/textView3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/textView2"
+        android:layout_marginLeft="27dp"
+        android:layout_marginTop="54dp"
+        android:text="Password"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignLeft="@+id/textView3"
+        android:layout_centerVertical="true"
+        android:text="Repeat \nPassword"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/textView2"
+        android:layout_marginTop="43dp"
+        android:text="User"
+        android:textSize="20sp" />
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/textView3"
+        android:layout_below="@+id/newUser"
+        android:layout_marginTop="41dp"
+        android:text="E-mail"
+        android:textSize="20sp" />
+
+    <EditText
+        android:id="@+id/newEmail"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/textView3"
+        android:layout_alignLeft="@+id/newUser"
+        android:ems="10"
+        android:singleLine="true" />
+
 </RelativeLayout>
+</ScrollView>
