--- a/EverywhereHouseController/res/layout/activity_main.xml
+++ b/EverywhereHouseController/res/layout/activity_main.xml
@@ -18,4 +18,14 @@
         android:orientation="vertical"     
 	    ></LinearLayout>
 
+	        <TextView
+            android:id="@+id/textRsoom"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:layout_centerVertical="true"
+            android:text="TextView"
+            android:textColor="@color/Black"
+            android:textSize="30sp" />
+
 </LinearLayout>
