--- a/EverywhereHouseController/res/layout-large/profile_view.xml
+++ b/EverywhereHouseController/res/layout-large/profile_view.xml
@@ -3,20 +3,20 @@
 <android.support.v4.widget.DrawerLayout
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 android:id="@+id/drawer_layout"
-	 android:layout_width="match_parent"
-	 android:layout_height="match_parent" >
+	 android:layout_width="fill_parent"
+	 android:layout_height="fill_parent" >
 	 
 <RelativeLayout 
     android:id="@+id/RelativeLayout2"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@color/GreenApp"
     android:orientation="vertical" >
 
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
         android:layout_width="wrap_content"
-        android:layout_height="100dp"
+        android:layout_height="60dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
@@ -25,105 +25,32 @@
 
         <Button
             android:id="@+id/profileExit"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/button_config"
             android:onClick="onClickButton"
             android:text="Exit"
             android:textColor="@drawable/button_text_color2"
-            android:textSize="40sp" />
+            android:textSize="30sp" />
 
         <Button
             android:id="@+id/profileSave"
-            android:layout_width="200dp"
-            android:layout_height="60dp"
+            android:layout_width="230dp"
+            android:layout_height="50dp"
             android:layout_alignBaseline="@+id/profileExit"
             android:layout_alignBottom="@+id/profileExit"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/button_config"
             android:onClick="onClickButton"
             android:text="Save"
             android:textColor="@drawable/button_text_color2"
-            android:textSize="40sp" />
+            android:textSize="30sp" />
 
     </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/UserImage"
-        android:orientation="vertical" >
-
-        <TextView
-            android:id="@+id/textMessage"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="User"
-            android:textColor="@color/White"
-            android:textSize="40sp" />
-
-        <EditText
-            android:id="@+id/profileUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:gravity="center_vertical|center_horizontal"
-            android:singleLine="true"
-            android:textColor="@color/Black"
-            android:textSize="30sp" >
-
-            <requestFocus />
-        </EditText>
-
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="E-mail"
-            android:textColor="@color/White"
-            android:textSize="40sp" />
-
-        <EditText
-            android:id="@+id/profileEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:gravity="center_vertical|center_horizontal"
-            android:singleLine="true"
-            android:textColor="@color/Black"
-            android:textSize="30sp" />
-
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Password"
-            android:textColor="@color/White"
-            android:textSize="40sp" />
-
-        <EditText
-            android:id="@+id/profilePassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:gravity="center_vertical|center_horizontal"
-            android:inputType="textPassword"
-            android:singleLine="true"
-            android:textColor="@color/Black"
-            android:textSize="30sp" />
-    </LinearLayout>
 
     <ImageButton
         android:id="@+id/UserImage"
@@ -134,6 +61,102 @@
         android:layout_marginTop="28dp"
         android:background="@color/GreenApp"
         android:src="@drawable/user_icon" />
+
+        <RelativeLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/UserImage"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="70dp" >
+
+        <TableLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="30dp"
+            android:gravity="center_horizontal" >
+
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/textMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:text="User"
+                    android:textColor="@color/White"
+                    android:textSize="30sp" />
+
+                <EditText
+                    android:id="@+id/profileUser"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:ems="10"
+                    android:gravity="center_vertical|center_horizontal|left"
+                    android:singleLine="true"
+                    android:textColor="@color/Black"
+                    android:textSize="30sp" >
+
+                    <requestFocus />
+                </EditText>
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:text="E-mail"
+                    android:textColor="@color/White"
+                    android:textSize="30sp" />
+
+                <EditText
+                    android:id="@+id/profileEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_vertical|center_horizontal|left"
+                    android:singleLine="true"
+                    android:textColor="@color/Black"
+                    android:textSize="30sp" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:text="Password"
+                    android:textColor="@color/White"
+                    android:textSize="30sp" />
+
+                <EditText
+                    android:id="@+id/profilePassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_vertical|center_horizontal|left"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColor="@color/Black"
+                    android:textSize="30sp" />
+            </TableRow>
+        </TableLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
 	<ListView
