--- a/EverywhereHouseController/res/layout-small/profile_view.xml
+++ b/EverywhereHouseController/res/layout-small/profile_view.xml
@@ -3,20 +3,20 @@
 <android.support.v4.widget.DrawerLayout
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 android:id="@+id/drawer_layout"
-	 android:layout_width="match_parent"
-	 android:layout_height="match_parent" >
+	 android:layout_width="fill_parent"
+	 android:layout_height="fill_parent" >
 	 
 <RelativeLayout 
     android:id="@+id/RelativeLayout2"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
     android:background="@color/GreenApp"
     android:orientation="vertical" >
 
     <ImageButton
         android:id="@+id/UserImage"
-        android:layout_width="100dp"
-        android:layout_height="100dp"
+        android:layout_width="90dp"
+        android:layout_height="90dp"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
@@ -26,7 +26,7 @@
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
         android:layout_width="wrap_content"
-        android:layout_height="40dp"
+        android:layout_height="30dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
         android:layout_alignParentRight="true"
@@ -35,11 +35,11 @@
 
         <Button
             android:id="@+id/profileExit"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="20dp"
+            android:layout_marginLeft="10dp"
             android:background="@drawable/button_config"
             android:onClick="onClickButton"
             android:text="Exit"
@@ -48,11 +48,11 @@
 
         <Button
             android:id="@+id/profileSave"
-            android:layout_width="100dp"
-            android:layout_height="40dp"
+            android:layout_width="150dp"
+            android:layout_height="30dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="20dp"
+            android:layout_marginRight="10dp"
             android:background="@drawable/button_config"
             android:onClick="onClickButton"
             android:text="Save"
@@ -61,80 +61,101 @@
 
     </RelativeLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_above="@+id/RelativeLayout1"
         android:layout_alignParentLeft="true"
-        android:layout_alignParentRight="true"
-        android:layout_below="@+id/UserImage"
-        android:orientation="vertical" >
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp" >
 
-        <TextView
-            android:id="@+id/textMessage"
-            android:layout_width="wrap_content"
+        <TableLayout
+            android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="User"
-            android:textColor="@color/White"
-            android:textSize="20sp" />
+            android:layout_marginBottom="10dp"
+            android:gravity="center_horizontal" >
 
-        <EditText
-            android:id="@+id/profileUser"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:gravity="center_vertical|center_horizontal"
-            android:singleLine="true"
-            android:textColor="@color/Black"
-            android:textSize="20sp" >
+            <TableRow
+                android:id="@+id/tableRow1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
 
-            <requestFocus />
-        </EditText>
+                <TextView
+                    android:id="@+id/textMessage"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:text="User"
+                    android:textColor="@color/White"
+                    android:textSize="20sp" />
 
-        <TextView
-            android:id="@+id/textView2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="E-mail"
-            android:textColor="@color/White"
-            android:textSize="20sp" />
+                <EditText
+                    android:id="@+id/profileUser"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_vertical|center_horizontal|left"
+                    android:singleLine="true"
+                    android:textColor="@color/Black"
+                    android:textSize="20sp" />
+            </TableRow>
 
-        <EditText
-            android:id="@+id/profileEmail"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:gravity="center_vertical|center_horizontal"
-            android:singleLine="true"
-            android:textColor="@color/Black"
-            android:textSize="20sp" />
+            <TableRow
+                android:id="@+id/tableRow2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
 
-        <TextView
-            android:id="@+id/textView3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:text="Password"
-            android:textColor="@color/White"
-            android:textSize="20sp" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:text="E-mail"
+                    android:textColor="@color/White"
+                    android:textSize="20sp" />
 
-        <EditText
-            android:id="@+id/profilePassword"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:ems="10"
-            android:gravity="center_vertical|center_horizontal"
-            android:inputType="textPassword"
-            android:singleLine="true"
-            android:textColor="@color/Black"
-            android:textSize="20sp" />
-    </LinearLayout>
+                <EditText
+                    android:id="@+id/profileEmail"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_vertical|center_horizontal|left"
+                    android:singleLine="true"
+                    android:textColor="@color/Black"
+                    android:textSize="20sp" />
+            </TableRow>
+
+            <TableRow
+                android:id="@+id/tableRow3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_horizontal|center_vertical"
+                    android:text="Password"
+                    android:textColor="@color/White"
+                    android:textSize="20sp" />
+
+                <EditText
+                    android:id="@+id/profilePassword"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:ems="10"
+                    android:gravity="center_vertical|center_horizontal|left"
+                    android:inputType="textPassword"
+                    android:singleLine="true"
+                    android:textColor="@color/Black"
+                    android:textSize="20sp" />
+            </TableRow>
+        </TableLayout>
+    </RelativeLayout>
 
 </RelativeLayout>
+
 	<ListView
 	    android:id="@+id/ListViewSlidingMenu"
 	    android:layout_width="match_parent"
