--- a/EverywhereHouseController/res/layout-xlarge/profile_view.xml
+++ b/EverywhereHouseController/res/layout-xlarge/profile_view.xml
@@ -1,72 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
-  
+
 <android.support.v4.widget.DrawerLayout
 	 xmlns:android="http://schemas.android.com/apk/res/android"
 	 android:id="@+id/drawer_layout"
 	 android:layout_width="fill_parent"
 	 android:layout_height="fill_parent" >
 	 
-<RelativeLayout
+<RelativeLayout 
     android:id="@+id/RelativeLayout2"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:background="@color/GreenApp"
     android:orientation="vertical" >
 
-    <ImageButton
-        android:id="@+id/UserImage"
-        android:layout_width="170dp"
-        android:layout_height="170dp"
-        android:layout_alignParentTop="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="10dp"
-        android:background="@color/GreenApp"
-        android:src="@drawable/user_icon" />
-
     <RelativeLayout
         android:id="@+id/RelativeLayout1"
         android:layout_width="wrap_content"
-        android:layout_height="50dp"
+        android:layout_height="90dp"
         android:layout_alignParentBottom="true"
         android:layout_alignParentLeft="true"
+        android:layout_alignParentRight="true"
         android:background="@color/GreenApp"
         android:orientation="vertical" >
 
         <Button
             android:id="@+id/profileExit"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
+            android:layout_width="390dp"
+            android:layout_height="90dp"
             android:layout_alignParentLeft="true"
             android:layout_centerVertical="true"
             android:layout_marginLeft="10dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/button_config"
             android:onClick="onClickButton"
             android:text="Exit"
             android:textColor="@drawable/button_text_color2"
-            android:textSize="20sp" />
+            android:textSize="40sp" />
 
         <Button
             android:id="@+id/profileSave"
-            android:layout_width="150dp"
-            android:layout_height="40dp"
+            android:layout_width="390dp"
+            android:layout_height="90dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:layout_marginRight="10dp"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/button_config"
             android:onClick="onClickButton"
             android:text="Save"
             android:textColor="@drawable/button_text_color2"
-            android:textSize="20sp" />
+            android:textSize="40sp" />
+
     </RelativeLayout>
+
+    <ImageButton
+        android:id="@+id/UserImage"
+        android:layout_width="400dp"
+        android:layout_height="400dp"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="30dp"
+        android:background="@color/GreenApp"
+        android:src="@drawable/user_icon" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_above="@+id/RelativeLayout1"
         android:layout_alignParentLeft="true"
-        android:layout_marginBottom="40dp"
-        android:layout_marginLeft="10dp"
-        android:layout_marginRight="10dp" >
+        android:layout_below="@+id/UserImage"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:layout_marginTop="150dp" >
 
         <TableLayout
             android:layout_width="fill_parent"
@@ -86,17 +90,20 @@
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:text="User"
                     android:textColor="@color/White"
-                    android:textSize="20sp" />
+                    android:textSize="50sp" />
 
                 <EditText
                     android:id="@+id/profileUser"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:ems="10"
                     android:gravity="center_vertical|center_horizontal|left"
                     android:singleLine="true"
                     android:textColor="@color/Black"
-                    android:textSize="20sp" />
+                    android:textSize="40sp" >
+
+                    <requestFocus />
+                </EditText>
             </TableRow>
 
             <TableRow
@@ -111,7 +118,7 @@
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:text="E-mail"
                     android:textColor="@color/White"
-                    android:textSize="20sp" />
+                    android:textSize="50sp" />
 
                 <EditText
                     android:id="@+id/profileEmail"
@@ -121,7 +128,7 @@
                     android:gravity="center_vertical|center_horizontal|left"
                     android:singleLine="true"
                     android:textColor="@color/Black"
-                    android:textSize="20sp" />
+                    android:textSize="50sp" />
             </TableRow>
 
             <TableRow
@@ -136,7 +143,7 @@
                     android:layout_gravity="center_horizontal|center_vertical"
                     android:text="Password"
                     android:textColor="@color/White"
-                    android:textSize="20sp" />
+                    android:textSize="50sp" />
 
                 <EditText
                     android:id="@+id/profilePassword"
@@ -147,13 +154,12 @@
                     android:inputType="textPassword"
                     android:singleLine="true"
                     android:textColor="@color/Black"
-                    android:textSize="20sp" />
+                    android:textSize="50sp" />
             </TableRow>
         </TableLayout>
     </RelativeLayout>
 
 </RelativeLayout>
-
 	<ListView
 	    android:id="@+id/ListViewSlidingMenu"
 	    android:layout_width="match_parent"
@@ -161,4 +167,4 @@
 	    android:layout_gravity="left"
 	    android:background="@color/GreenApp" />
  
-</android.support.v4.widget.DrawerLayout> 
+</android.support.v4.widget.DrawerLayout>
